# void-engine

./: CMakeLists.txt  linux.sh  windows.sh
include/void_engine/: engine.hpp  window.hpp
include/void_engine/types/: base_object.hpp  renderable_object.hpp
include/void_engine/types/2D/: object_2d.hpp  rect.hpp
src/: engine.cpp  main.cpp  test.cpp  window.cpp
src/2D/: object_2d.cpp  rect.cpp
